# CRuMb

./: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  restart.bat  test.json
admin/: app.py  content.py  exceptions.py  main.py  resource.py
admin/datagrid/: __init__.py  pagination.py  view.py
admin/forms/: __init__.py  form.py  model_form.py  primitive.py  schema.py  widget_schema_creator.py
admin/layout/: __init__.py  btn_pin.py  content_box.py  contentbox.py  header.py  loader.py  menu_group.py  menu_item.py  modal_box.py  payload.py  popover.py  popup.py  sidebar.py  size_aware_container.py  tabs_bar.py
admin/list/: __init__.py  choise_view.py  datagrid.py  list_view.py  pagination.py
admin/table/: cell_position.py  table.py  table_body.py  table_cell.py  table_header.py  table_header_cell.py  table_row.py  width_changer.py
configuration/: admin.py  constants.py  enums.py  menu_groups.py  repositories.py  resources.py  run.py  settings.py  test.py  translations.py
configuration/accum_registers/: models.py  repositories.py
configuration/assets/: manifest.json
configuration/directories/: models.py  repositories.py  resources.py
configuration/documents/: models.py  repositories.py  resources.py
configuration/info_registers/: models.py  repositories.py
core/: base_model.py  constants.py  enums.py  exceptions.py  maps.py  repository.py  resource.py  translations.py  types.py  utils.py
core/accum_registers/: model.py
core/admin/: app.py  login_view.py  resource.py
crumb/: __init__.py
data/: admin.nginx.conf
(+300 files in other folders)
